# anystore

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Makefile  NOTICE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: python.yml
anystore/: __init__.py  cli.py  decorators.py  exceptions.py  io.py  logging.py  mirror.py  mixins.py  model.py  serialize.py  settings.py  store.py  types.py  util.py  worker.py
anystore/store/: __init__.py  abstract.py  base.py  fs.py  memory.py  redis.py  sql.py  virtual.py  zip.py
docs/: cache.md  configuration.md  index.md  overview.md  quickstart.md  serialization.md  storage.md  usage.md
docs/reference/: cli.md  decorators.md  io.md  serialize.md  settings.md  store.md  util.md
tests/: conftest.py  test_cli.py  test_decorator.py  test_io.py  test_mirror.py  test_mixin.py  test_serialize.py  test_store.py  test_util.py  test_worker.py
tests/fixtures/: model.json  model.yaml  store.json  store.yml
