[tool.poetry]
name = "anystore"
version = "0.0.6"
description = "Store and cache things anywhere"
authors = ["Simon Wörpel <simon.woerpel@pm.me>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/investigativedata/anystore"
repository = "https://github.com/investigativedata/anystore"
documentation = "https://github.com/investigativedata/anystore"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "anystore"}]

[tool.poetry.scripts]
anystore = "anystore.cli:cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/investigativedata/anystore/issues"


[tool.poetry.dependencies]
python = ">=3.11,<4"
banal = "^1.0.6"
orjson = "^3.9.15"
pydantic = "^2.6.2"
fsspec = ">2023.10,<2025"
s3fs = ">2023.10,<2025"
gcsfs = ">2023.10,<2025"
adlfs = ">2023.10,<2025"
sqlalchemy = "^2.0.27"
redis = "^5.0.1"
fakeredis = "^2.21.1"
typer = "^0.9.0"
pyaml = "^23.12.0"
cloudpickle = "^3.0.0"
pydantic-settings = "^2.2.1"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3,<9.0.0"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.1"
black = ">=23.11,<25.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
flake8 = ">=6.1,<8.0"
ipdb = "^0.13.13"
bump2version = "^1.0.1"
moto = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
ANYSTORE_YAML_URI = "./tests/fixtures/store.yml"
AWS_ACCESS_KEY_ID = "foo"
AWS_SECRET_ACCESS_KEY = "bar"
