[tool.poetry]
name = "anystore"
version = "0.2.2"
description = "Store and cache things anywhere"
authors = ["Simon Wörpel <simon.woerpel@pm.me>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://docs.investigraph.dev/lib/anystore"
repository = "https://github.com/investigativedata/anystore"
documentation = "https://docs.investigraph.dev/lib/anystore"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{ include = "anystore" }]

[tool.poetry.scripts]
anystore = "anystore.cli:cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/investigativedata/anystore/issues"


[tool.poetry.dependencies]
python = ">=3.11,<4"
banal = "^1.0.6"
orjson = "^3.9.15"
pydantic = "^2.6.3"
fsspec = ">2023.10,<2025"
s3fs = ">2023.10,<2025"
gcsfs = ">2023.10,<2025"
adlfs = ">2023.10,<2025"
typer = ">=0.9,<0.16"
pyaml = ">=23.12,<26.0"
cloudpickle = "^3.0.0"
pydantic-settings = "^2.2.1"
rich = "^13.7.0"
pytest = "^8.0.2"
cryptography = ">=42.0.4"
structlog = "^24.4.0"
shortuuid = "^1.0.13"
sshfs = "^2024.9.0"
sqlalchemy = {version = "^2.0.36", optional = true}
redis = {version = "^5.2.1", optional = true}
fakeredis = {version = "^2.26.2", optional = true}

[tool.poetry.extras]
sql = ["sqlalchemy"]
redis = ["redis", "fakeredis"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = ">=4.1,<7.0"
pytest-env = "^1.1.1"
black = ">=23.11,<25.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = ">=3.5,<5.0"
flake8 = ">=6.1,<8.0"
ipdb = "^0.13.13"
bump2version = "^1.0.1"
moto = "^5.0.11"
pytest-asyncio = ">=0.23.8,<0.26.0"
mkdocs-material = "^9.5.39"
mkdocs-autorefs = "^1.2.0"
mkdocstrings-python = "^1.12.2"
griffe-pydantic = "^1.1.0"
mkdocs-typer = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
REDIS_DEBUG = 1
DEBUG = 1
ANYSTORE_YAML_URI = "./tests/fixtures/store.yml"
