[project]
name = "anystore"
version = "0.3.0"
description = "Store and cache things anywhere"
authors = [{ name = "Simon Wörpel", email = "simon.woerpel@pm.me" }]
license = "AGPLv3+"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11,<4"
dependencies = [
    "banal (>=1.0.6,<2.0.0)",
    "orjson>=3.9.15",
    "pydantic>=2.6.3",
    "fsspec (>2023.10,<2026)",
    "s3fs (>2023.10,<2026)",
    "typer (>=0.15.1,<0.16.0)",
    "pyaml (>=25.1.0,<26.0.0)",
    "cloudpickle (>=3.1.0,<4.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "structlog (>=24.4.0,<25.0.0)",
]

[project.optional-dependencies]
sql = ["sqlalchemy (>=2.0.36,<3.0.0)"]
redis = ["redis (>=5.2.1,<6.0.0)", "fakeredis (>=2.26.2,<3.0.0)"]

[project.scripts]
anystore = "anystore.cli:cli"

[project.urls]
Homepage = "https://docs.investigraph.dev/lib/anystore"
Documentation = "https://docs.investigraph.dev/lib/anystore"
Repository = "https://github.com/investigativedata/anystore"
Issues = "https://github.com/investigativedata/anystore/issues"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = ">=4.1,<7.0"
pytest-env = "^1.1.1"
black = ">=23.11,<25.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = "^4.0.1"
flake8 = ">=6.1,<8.0"
ipdb = "^0.13.13"
bump2version = "^1.0.1"
moto = "^5.0.11"
pytest-asyncio = ">=0.23.8,<0.26.0"
mkdocs-material = "^9.5.39"
mkdocs-autorefs = "^1.2.0"
mkdocstrings-python = "^1.12.2"
griffe-pydantic = "^1.1.0"
mkdocs-typer = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
REDIS_DEBUG = 1
DEBUG = 1
ANYSTORE_YAML_URI = "./tests/fixtures/store.yml"
